[feat] Upgrade token authentication mode
